# iris

./: .env.example  Dockerfile.backend  Dockerfile.frontend  README.md  compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 43e495057c67_create_iris_table.py  44e96a3b72bf_create_users_table.py  6e3b3c12e48d_add_totp_to_users.py  aaa9fe2a6e1f_add_audit_log.py  d27792178a22_add_audit_log.py  f8841c57e8a5_add_roles_and_user_roles.py
app/audit/: routes.py  service.py
app/auth/: routes.py
app/core/: deps.py  ratelimit.py  redis_client.py  security.py  tokens.py
app/models/: __init__.py  audit.py  role.py  user.py
app/users/: crud.py  routes.py  schemas.py
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/api/: axios.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js
frontend/src/views/: ChartView.vue  IrisView.vue  LoginView.vue  RegisterView.vue
iris/: cli.py  config.py  database.py  main.py
iris/crud/: __init__.py  iris.py
iris/models/: __init__.py  iris.py
iris/routes/: iris.py
iris/schemas/: __init__.py  common.py  iris.py
scripts/: crawl_iris.py
